# text_to_sql

./: README.md  pyproject.toml  requirements.txt
simple chat to sql/: list_models.py  simple_llmtosql.py  simple_sqldbcreate.py  studentdatabase.db
